--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <link rel="stylesheet" href="css/objects/container-braven.css">
 
     <link rel="stylesheet" href="css/components/header-braven.css">
+    <link rel="stylesheet" href="css/components/menu-braven.css">
     
 </head>
 <body>
@@ -26,6 +27,20 @@
         <header class="header-braven">
             <h1 class="title">Braven</h1>
             <nav class="menu-braven">
+                <a href="#menu" class="menu">Menu</a>
+
+                <ul id="menu" class="items">
+                    <li class="close">X</li>
+                    <li class="item">
+                        <a href="" class="action">Cast</a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="action">Tecnical Specs</a>
+                    </li>
+                    <li class="item">
+                        <a href="" class="action">User reviews</a>
+                    </li>
+                </ul>
 
             </nav>
         </header>
