--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <!-- Google Font-->
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700,900,900i" rel="stylesheet">
     
+    <link rel="stylesheet" href="css/settings/size.css">
     <link rel="stylesheet" href="css/settings/colors.css">
     
     <!--RESET CSS-->
