--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
             </nav>
         </header>
     </main>
+    <!-- JS -->
+    <script src="js/components/menu-braven.js"></script>
 </body>
  
 </html>
