Feito o player para trailer do filme

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 
     <link rel="stylesheet" href="css/components/header-braven.css">
     <link rel="stylesheet" href="css/components/menu-braven.css">
+    <link rel="stylesheet" href="css/components/featured-braven.css">
     
 </head>
 <body>
@@ -45,6 +46,12 @@
 
             </nav>
         </header>
+
+        <section class="featured-braven">
+            <a href="https://www.youtube.com/watch?v=hOwIQNA9A8I" class="action">Watch trailer YOUTUBE</a>
+            <h1 class="title">Watch trailer</h1>
+            <h2 class="subtitle"><strong>IMDB</strong>6,6<small>/10</small> </h2>
+        </section>
     </main>
     <!-- JS -->
     <script src="js/components/menu-braven.js"></script>
